fix(ServicesView.js) align vertically

--- a/src/styles/ServicesView.css
+++ b/src/styles/ServicesView.css
@@ -17,20 +17,20 @@
 	width: 100%;
 } 
 
-.service-view-wide .service-icon {
-	margin: 0 10%;
+.service-view-wide .service-icon-container {
+	margin: 0 5%;
 }
 
 .service-view-wide .service-info-box {
-	margin: 0 10%;
+	margin: 0 5%;
 }
 
-.service-view-slim .service-icon {
-	margin: 0 5%;
+.service-view-slim .service-icon-container {
+	margin: 0 2.5%;
 }
 
 .service-view-slim .service-info-box {
-	margin: 0 5%;
+	margin: 0 2.5%;
 }
 
 /* =================== Info Box ================== */
@@ -40,6 +40,11 @@
   align-items: center;
   justify-content: center;
   white-space: nowrap;
+  width: 373px; /* make width of widest box so that margin values align*/
+}
+
+.service-icon-container {
+	width: 373px;
 }
 
 .service-info-box-heading {
